Added all the other expenditure datalist

--- a/church1/assest/datalist/local-expenditure-datalist.html
+++ b/church1/assest/datalist/local-expenditure-datalist.html
@@ -5,4 +5,40 @@
     <option value="Funeral"></option>
     <option value="Charity"></option>
     <option value="Post office Bill"></option>
+
+
+    
+    <option value="Family Ministries"></option>
+    <option value="Electricals / Electronics"></option>
+    <option value="Sabbath School Subsidy"></option>
+    <option value="Business/ Board Meeting"></option>
+    <option value="Secretariat"></option>
+    <option value="Project"></option>
+    
+    <option value="Treasury Department"></option>
+    <option value="Women Ministry/ Young ladies"></option>
+    <option value="Interest Coordinator"></option>
+    <option value="Children Ministry"></option>
+    <option value="Church Choir"></option>
+    <option value="Singing Band"></option>
+    <option value="Youth Ministry"></option>
+    <option value="Young Adult"></option>
+    <option value="Funrniture"></option>
+    <option value="Home and family"></option>
+    <option value="Donation"></option>
+    <option value="Communications"></option>
+    <option value="Stewardship"></option>
+    <option value="Personal Ministries"></option>
+    <option value="Camp Meeting Goal"></option>
+    <option value="Annual Thanksgiving"></option>
+    <option value="Bible Society Collection"></option>
+    <option value="Hope Channel Contribution"></option>
+    <option value="Adventist Men"></option>
+    <option value="Elders"></option>
+    <option value="Adra"></option>
+    <option value="Heritage Fund"></option>
+    <option value="Book of the Year"></option>
+    <option value="Security Allowance"></option>
+    <option value="Church Budget"></option>
+
   </datalist>
