--- a/church1/dashboard.html
+++ b/church1/dashboard.html
@@ -149,3 +149,68 @@ Promise.all([
 
 
 });
+
+
+
+
+
+
+
+
+
+
+
+EXPENDITURE
+TITHE, C.B.F, LOOSE OFFERING, THANKSGIVING, UTILITIES, DEACONERY, LOCAL T AND T,  FUNERAL, POST OFFICE BILL, FAMILY MINISTRIES, CHARITY, ELECTRICALS / ELECTRONICS, SABBATH SCHOOL SUBSIDY, BUSINESS/ BOARD MEETING, SECRETARIAT, PROJECT, DISTRICT T AND T, TREASURY DEPARTMENT, WOMEN MINISTRY/ YOUNG LADIES, INTEREST COORDINATOR, CHILDREN MINISTRY, CHURCH CHOIR, SINGING BAND, YOUTH MINISTRY, YOUNG ADULT, FUNRNITURE, HOME AND FAMILY, DONATION, COMMUNICATIONS, STEWARDSHIP, PERSONAL MINISTRIES, CAMP MEETING GOAL, ANNUAL THANKSGIVING, DORYUMU SCHOOL, BIBLE SOCIETY COLLECTION, HOPE CHANNEL CONTRIBUTION, DISTRICT EXPENSES, ADVENTIST MEN, ELDERS, ADRA, HERITAGE FUND, BOOK OF THE YEAR, SECURITY ALLOWANCE, CHURCH BUDGET
+
+
+INCOME
+TITHE, C.B.F, LOOSE OFFERING, THANKSGIVING, CHILDREN MINISTRY, SABBATH SCHOOL, FUND RAISING, CHURCH BUDGET, PLEDGES, BIBLE SOCIETY CONTRIBUTION, COVENANT & 1ST FRUIT, ANNUAL THANKSGIVING HARVEST, SINGING BAND, EXPENSE RETURNS, CHARITY, APPEAL COLLECTION, EVANGELISM FUND, BIRTHDAY CELEBRATION, HOPE TV COLLECTION, CHURCH CHOIR , COMMUNION SERVICE OFFERING, FUNERAL CONTRIBUTION COLLECTION, BOOK OF THE YEAR, SEED SOWING, YOUNG ADULTS, CAMP MEETING GOAL APPEAL, DISTRICT CAMPAIGN PLEDGES, ADVENTIST YOUTH, WOMAN MINISTRY, ADVENTIST MEN, 12TH SABBATH CELEBRATION, 13TH SABBATH CELEBRATION, CHURCH PROJECT APPEAL
+
+
+
+
+
+                            <td>${row['NUM']}</td>
+                            <td>${row['USER']}</td>
+                            <td>${row['DATE']}</td>
+                            <td>${row['UTILITIES']}</td>
+                            <td>${row['DEACONERY']}</td>
+                            <td>${row['LOCAL-TRANSPORT']}</td>
+                            <td>${row['FUNERAL']}</td>
+                            <td>${row['CHARITY']}</td>  
+                            <td>${row['POST-OFFICE-BILL']}</td>  
+
+
+                            <td>${row['FAMILY-MINISTRIES']}</td>
+                            <td>${row['ELECTRICALS-/-ELECTRONICS']}</td>
+                            <td>${row['SABBATH-SCHOOL-SUBSIDY']}</td>
+                            <td>${row['BUSINESS/-BOARD-MEETING']}</td>
+                            <td>${row['SECRETARIAT']}</td>
+                            <td>${row['PROJECT']}</td>
+                            <td>${row['DISTRICT-TRANSPORTATION']}</td>
+                            <td>${row['TREASURY-DEPARTMENT']}</td>
+                            <td>${row['WOMEN-MINISTRY/-YOUNG-LADIES']}</td>
+                            <td>${row['INTEREST-COORDINATOR']}</td>
+                            <td>${row['CHILDREN-MINISTRY']}</td>
+                            <td>${row['CHURCH-CHOIR']}</td>
+                            <td>${row['SINGING-BAND']}</td>
+                            <td>${row['YOUTH-MINISTRY']}</td>
+                            <td>${row['YOUNG-ADULT']}</td>
+                            <td>${row['FUNRNITURE']}</td>
+                            <td>${row['HOME-AND-FAMILY']}</td>
+                            <td>${row['DONATION']}</td>
+                            <td>${row['COMMUNICATIONS']}</td>
+                            <td>${row['STEWARDSHIP']}</td>
+                            <td>${row['PERSONAL-MINISTRIES']}</td>
+                            <td>${row['CAMP-MEETING-GOAL']}</td>
+                            <td>${row['ANNUAL-THANKSGIVING']}</td>
+                            <td>${row['BIBLE-SOCIETY-COLLECTION']}</td>
+                            <td>${row['HOPE-CHANNEL-CONTRIBUTION']}</td>
+                            <td>${row['ADVENTIST-MEN']}</td>
+                            <td>${row['ELDERS']}</td>
+                            <td>${row['ADRA']}</td>
+                            <td>${row['HERITAGE-FUND']}</td>
+                            <td>${row['BOOK-OF-THE-YEAR']}</td>
+                            <td>${row['SECURITY-ALLOWANCE']}</td>
+                            <td>${row['CHURCH-BUDGET']}</td>
