Changed spelling of furniture

--- a/church1/assest/datalist/local-expenditure-datalist.html
+++ b/church1/assest/datalist/local-expenditure-datalist.html
@@ -23,7 +23,7 @@
     <option value="Singing Band"></option>
     <option value="Youth Ministry"></option>
     <option value="Young Adult"></option>
-    <option value="Funrniture"></option>
+    <option value="Furniture"></option>
     <option value="Home and family"></option>
     <option value="Donation"></option>
     <option value="Communications"></option>
