--- a/church1/local-expenditure-records.html
+++ b/church1/local-expenditure-records.html
@@ -99,7 +99,7 @@
                         <th>Singing Band</th>
                         <th>Youth Ministry</th>
                         <th>Young Adult</th>
-                        <th>Funrniture</th>
+                        <th>Furniture</th>
                         <th>Home and family</th>
                         <th>Donation</th>
                         <th>Communications</th>
@@ -182,7 +182,7 @@
                             <td>${row['SINGING-BAND']}</td>
                             <td>${row['YOUTH-MINISTRY']}</td>
                             <td>${row['YOUNG-ADULT']}</td>
-                            <td>${row['FUNRNITURE']}</td>
+                            <td>${row['FURNITURE']}</td>
                             <td>${row['HOME-AND-FAMILY']}</td>
                             <td>${row['DONATION']}</td>
                             <td>${row['COMMUNICATIONS']}</td>
