Added the headers, datalist, and table content for income records and book

--- a/church1/assest/datalist/income-datalist.html
+++ b/church1/assest/datalist/income-datalist.html
@@ -7,6 +7,35 @@
     <option value="Sabbath School"></option>
     <option value="Fund Raising"></option>
 
+
+    
+    <option value="Church Budget"></option>
+    <option value="Pledges"></option>
+    <option value="Bible Society Contribution"></option>
+    <option value="Covenant / 1st Fruit"></option>
+    <option value="Annual Thanksgiving Harvest"></option>
+    <option value="Singing Band"></option>
+    <option value="Expense Returns"></option>
+    <option value="Charity"></option>
+    <option value="Appeal Collection"></option>
+    <option value="Evangelism Fund"></option>
+    <option value="Birthday Celebration"></option>
+    <option value="Hope Tv Collection"></option>
+    <option value="Church Choir"></option>
+    <option value="Communion Service Offering"></option>
+    <option value="Funeral Contribution Collection"></option>
+    <option value="Book Of The Year"></option>
+    <option value="Seed Sowing"></option>
+    <option value="Young Adults"></option>
+    <option value="Camp Meeting Goal Appeal"></option>
+    <option value="District Campaign Pledges"></option>
+    <option value="Adventist Youth"></option>
+    <option value="Woman Ministry"></option>
+    <option value="Adventist Men"></option>
+    <option value="12th Sabbath Celebration"></option>
+    <option value="13th Sabbath Celebration"></option>
+    <option value="Church Project Appeal"></option>
+
 <!-- //All new income data would be added here -->
 </datalist>
  
