Added email verification when you sign up and also when logging checks if user is verified

--- a/church1/local-income-records.html
+++ b/church1/local-income-records.html
@@ -83,6 +83,34 @@
                         <th>Sabbath School</th>
                         <th>Fund Raising</th>
 
+
+                        <th>Church Budget</th>
+                        <th>Pledges</th>
+                        <th>Bible Society Contribution</th>
+                        <th>Covenant / 1st Fruit</th>
+                        <th>Annual Thanksgiving Harvest</th>
+                        <th>Singing Band</th>
+                        <th>Expense Returns</th>
+                        <th>Charity</th>
+                        <th>Appeal Collection</th>
+                        <th>Evangelism Fund</th>
+                        <th>Birthday Celebration</th>
+                        <th>Hope Tv Collection</th>
+                        <th>Church Choir</th>
+                        <th>Communion Service Offering</th>
+                        <th>Funeral Contribution Collection</th>
+                        <th>Book Of The Year</th>
+                        <th>Seed Sowing</th>
+                        <th>Young Adults</th>
+                        <th>Camp Meeting Goal Appeal</th>
+                        <th>District Campaign Pledges</th>
+                        <th>Adventist Youth</th>
+                        <th>Woman Ministry</th>
+                        <th>Adventist Men</th>
+                        <th>12th Sabbath Celebration</th>
+                        <th>13th Sabbath Celebration</th>
+                        <th>Church Project Appeal</th>
+
                         <th>Total</th>
 
                     </tr>
@@ -131,6 +159,36 @@
                             <td>${row['CHILDREN-OFFERING']}</td>
                             <td>${row['SABBATH-SCHOOL']}</td>
                             <td>${row['FUND-RAISING']}</td>
+
+                            <td>${row['CHURCH-BUDGET']}</td>
+                            <td>${row['PLEDGES']}</td>
+                            <td>${row['BIBLE-SOCIETY-CONTRIBUTION']}</td>
+                            <td>${row['COVENANT-/-1ST-FRUIT']}</td>
+                            <td>${row['ANNUAL-THANKSGIVING-HARVEST']}</td>
+                            <td>${row['SINGING-BAND']}</td>
+                            <td>${row['EXPENSE-RETURNS']}</td>
+                            <td>${row['CHARITY']}</td>
+                            <td>${row['APPEAL-COLLECTION']}</td>
+                            <td>${row['EVANGELISM-FUND']}</td>
+                            <td>${row['BIRTHDAY-CELEBRATION']}</td>
+                            <td>${row['HOPE-TV-COLLECTION']}</td>
+                            <td>${row['CHURCH-CHOIR']}</td>
+                            <td>${row['COMMUNION-SERVICE-OFFERING']}</td>
+                            <td>${row['FUNERAL-CONTRIBUTION-COLLECTION']}</td>
+                            <td>${row['BOOK-OF-THE-YEAR']}</td>
+                            <td>${row['SEED-SOWING']}</td>
+                            <td>${row['YOUNG-ADULTS']}</td>
+                            <td>${row['CAMP-MEETING-GOAL-APPEAL']}</td>
+                            <td>${row['DISTRICT-CAMPAIGN-PLEDGES']}</td>
+                            <td>${row['ADVENTIST-YOUTH']}</td>
+                            <td>${row['WOMAN-MINISTRY']}</td>
+                            <td>${row['ADVENTIST-MEN']}</td>
+                            <td>${row['12TH-SABBATH-CELEBRATION']}</td>
+                            <td>${row['13TH-SABBATH-CELEBRATION']}</td>
+                            <td>${row['CHURCH-PROJECT-APPEAL']}</td>
+
+
+
                             <td>${row['TOTAL']}</td>  
                         `;
                         tableBody.appendChild(tr);
