Corrected the session storage name for district storage

--- a/church1/assest/datalist/district-expenditure-datalist.html
+++ b/church1/assest/datalist/district-expenditure-datalist.html
@@ -1,5 +1,5 @@
 <datalist id="particularsList">
-    <option value="Transportation"></option>
+    <option value="District Transportation"></option>
     <option value="Doryumu Sch Project"></option>
     
   </datalist>
