--- a/church1/district-records.html
+++ b/church1/district-records.html
@@ -79,7 +79,7 @@
                         <th>C.B.F</th>
                         <th>Loose Offering</th>
                         <th>Thanks Giving</th>
-                        <th>Transportation</th>
+                        <th>District Transportation</th>
                         <th>Doryumu Sch Project</th>
                         <th>Total</th>
 
@@ -126,7 +126,7 @@
                             <td>${row['C.B.F']}</td>
                             <td>${row['LOOSE-OFFERING']}</td>
                             <td>${row['THANKSGIVING']}</td>
-                            <td>${row['TRANSPORTATION']}</td>
+                            <td>${row['DISTRICT-TRANSPORTATION']}</td>
                             <td>${row['DORYUMU-SCH-PROJECT']}</td>
                             <td>${row['TOTAL']}</td>  
                         `;
