Added Hope Tv collection to the conference expenditure

--- a/church1/conference-records.html
+++ b/church1/conference-records.html
@@ -82,6 +82,7 @@
                         <th>Thanks Giving</th>
                         <th>Sabbath Sch Order</th>
                         <th>Camp Meeting Goal</th>
+                        <th>Hope TV Collection</th>
                         <th>Total</th>
 
                     </tr>
@@ -130,6 +131,7 @@
                             <td>${row['THANKSGIVING']}</td>
                             <td>${row['SABBATH-SCH-ORDER']}</td>
                             <td>${row['CAMP-GOAL']}</td>
+                            <td>${row['HOPE-TV-COLLECTION']}</td>
                             <td>${row['TOTAL']}</td>  
                         `;
                         tableBody.appendChild(tr);
