--- a/church1/cutoff.html
+++ b/church1/cutoff.html
@@ -94,6 +94,7 @@
                         <th>Thanks Giving</th>
                         <th>Sabbath Sch Order</th>
                         <th>Camp Goal</th>
+                        <th>Hope TV Collection</th>
                         <th>Total</th>
                     </tr>
                 </thead>
@@ -121,7 +122,7 @@
                         <th>C.B.F</th>
                         <th>Loose Offering</th>
                         <th>Thanks Giving</th>
-                        <th>Transportation</th>
+                        <th>District Transportation</th>
                         <th>Doryumu Sch Project</th>
                         <th>Total</th>
                     </tr>
@@ -227,6 +228,7 @@
                             <td>${row['THANKSGIVING']}</td>
                             <td>${row['SABBATH-SCH-ORDER']}</td>
                             <td>${row['CAMP-GOAL']}</td>
+                            <td>${row['HOPE-TV-COLLECTION']}</td>
                             <td>${row['TOTAL']}</td>    
                         `;
                         tableBody1.appendChild(tr);
@@ -274,7 +276,7 @@
                             <td>${row['C.B.F']}</td>
                             <td>${row['LOOSE-OFFERING']}</td>
                             <td>${row['THANKSGIVING']}</td>
-                            <td>${row['TRANSPORTATION']}</td>
+                            <td>${row['DISTRICT-TRANSPORTATION']}</td>
                             <td>${row['DORYUMU-SCH-PROJECT']}</td>
                             <td>${row['TOTAL']}</td>    
                         `;
