--- a/church1/AdminDashBoard/theme/index.html
+++ b/church1/AdminDashBoard/theme/index.html
@@ -130,7 +130,7 @@
                     <li><a class="has-arrow" href="javascript:void()" aria-expanded="false"><i
                                 class="icon icon-chart-bar-33"></i><span class="nav-text">Dashboard</span></a>
                         <ul aria-expanded="false">
-                            <li><a href="./index.html">Dashboard 1</a></li>
+                            <!-- <li><a href="./index.html">Dashboard 1</a></li> -->
                             <!-- <li><a href="./chart-chartjs.html">Dashboard 2</a></li> -->
                         </ul>
                     </li>
