--- a/church1/conference-expenditure-book.html
+++ b/church1/conference-expenditure-book.html
@@ -121,6 +121,7 @@
     <div id="datalistContainer"></div>
 
     <script src="./assest/scripts/script.js"></script>
+    <script src="./assest/webAppUrls/weburls.js"></script>
 
    <script>
       // Dynamically load the datalist from an external file
