--- a/church1/AdminDashBoard/theme/index.html
+++ b/church1/AdminDashBoard/theme/index.html
@@ -21,7 +21,7 @@
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script src="https://cdn.datatables.net/1.11.5/js/jquery.dataTables.min.js"></script>
     <script src="../../../church1/assest/scripts/auth.js"></script> 
-    <script src="../../../church1/assest/webAppUrls/weburls.js"></script> 
+    <script type="module" src="../../../church1/assest/webAppUrls/weburls.js"></script> 
 
 
 
@@ -330,7 +330,9 @@
 });
 
   // Function to fetch data from Google Apps Script Web App and update the HTML elements
-  document.addEventListener("DOMContentLoaded", () => {
+  //document.addEventListener("DOMContentLoaded", () => {
+
+     document.addEventListener('webAppUrlsReady', function() {
   // const IncomeWebAppUrl = 'https://script.google.com/macros/s/AKfycbz6aKEzFGa8ztzvunW_9gYJj3AMsHZkHwyslb8aQzwWKU9_D08q04E85VrB8-0nemuWdQ/exec';
   // const ExpenditureWebAppUrl = 'https://script.google.com/macros/s/AKfycby9-laPphroGrCkAsLCIUhM9ZHXhzfB5AB_bW5013Kxi33_epoj47Zd2qKzZM3pxOxryQ/exec';
   // const ConferenceWebAppUrl = 'https://script.google.com/macros/s/AKfycbyuWNfL4LByPRBo9pGUk_27DHAF-xiX8yR0ubIcbpa_yqQdTdICNvUo2iqlvTml1rXg/exec';
@@ -357,31 +359,31 @@
 
   // Fetch Income, Expenditure, Conference, District, Local Income data concurrently from the webApp URLs
   Promise.all([
-    fetch(IncomeWebAppUrl).then(response => {
+    fetch(window.webAppUrls.IncomeWebAppUrl).then(response => {
       if (!response.ok) {
         throw new Error('Network response was not ok for Income');
       }
       return response.json();
     }),
-    fetch(ExpenditureWebAppUrl).then(response => {
+    fetch(window.webAppUrls.ExpenditureWebAppUrl).then(response => {
       if (!response.ok) {
         throw new Error('Network response was not ok for Expenditure');
       }
       return response.json();
     }),
-    fetch(ConferenceWebAppUrl).then(response => {
+    fetch(window.webAppUrls.ConferenceWebAppUrl).then(response => {
       if (!response.ok) {
         throw new Error('Network response was not ok for Conference');
       }
       return response.json();
     }),
-    fetch(DistrictWebAppUrl).then(response => {
+    fetch(window.webAppUrls.DistrictWebAppUrl).then(response => {
       if (!response.ok) {
         throw new Error('Network response was not ok for District');
       }
       return response.json();
     }),
-    fetch(LocalIncomeWebAppUrl).then(response => {
+    fetch(window.webAppUrls.LocalIncomeWebAppUrl).then(response => {
       if (!response.ok) {
         throw new Error('Network response was not ok for Local');
       }
