--- a/church1/cutoff.html
+++ b/church1/cutoff.html
@@ -172,7 +172,7 @@
 
 
 <script src="./assest/scripts/script.js">  </script>
-<script src="./assest/webAppUrls/weburls.js"></script>
+<script type="module" src="./assest/webAppUrls/weburls.js"></script>
 
 <script>
 
@@ -198,15 +198,15 @@
 
 
 // First Table (That is the Conference Funds)
-
-        $(document).ready(function() {
+         $('#spinner2').show();
+        //$(document).ready(function() {
             // const ConferenceWebAppUrl = 'https://script.google.com/macros/s/AKfycbyuWNfL4LByPRBo9pGUk_27DHAF-xiX8yR0ubIcbpa_yqQdTdICNvUo2iqlvTml1rXg/exec';
             // Reference the web app URL from the external script weburls.js
-
+          document.addEventListener('webAppUrlsReady', function() {
             // Show spinner
-            $('#spinner2').show();
+            //$('#spinner2').show();
 
-            fetch(ConferenceWebAppUrl)
+            fetch(window.webAppUrls.ConferenceWebAppUrl)
                 .then(response => response.json())
                 .then(data => {
                     const tableBody1 = document.getElementById('tableBody1');
@@ -249,15 +249,15 @@
 
 
 // Second Table (That is the District Funds)
-
-        $(document).ready(function() {
+           $('#spinner2').show();
+        //$(document).ready(function() {
             // const DistrictWebAppUrl = 'https://script.google.com/macros/s/AKfycbz7UCFcas-OBahG81Gutd1SkzmFncvLgX30m_y43ZAE7uzpwjBANbq_4SZAiU_aWO3R5A/exec';
             // Reference the web app URL from the external script weburls.js
-
+          document.addEventListener('webAppUrlsReady', function() {
             // Show spinner
-            $('#spinner2').show();
+            //$('#spinner2').show();
 
-            fetch(DistrictWebAppUrl)
+            fetch(window.webAppUrls.DistrictWebAppUrl)
                 .then(response => response.json())
                 .then(data => {
                     const tableBody = document.getElementById('tableBody2');
