--- a/church1/district-expenditure-book.html
+++ b/church1/district-expenditure-book.html
@@ -122,7 +122,7 @@
 
 
     <script src="./assest/scripts/script.js"></script>
-    <script src="./assest/webAppUrls/weburls.js"></script>
+    <script type="module" src="./assest/webAppUrls/weburls.js"></script>
 
     <script>
   // Dynamically load the datalist from an external file
@@ -273,7 +273,7 @@
          const saveButton = document.getElementById("save");
          saveButton.style.display = "none";
         
-          fetch(DistrictWebAppUrl, { method: "POST", body: formData })
+          fetch(window.webAppUrls.DistrictWebAppUrl, { method: "POST", body: formData })
             .then(response => response.json())
             .then(result => {
               spinner.style.display = 'none';
