Removed the c sign from the footer section for all the pages

--- a/church1/assest/datalist/conference-expenditure-datalist.html
+++ b/church1/assest/datalist/conference-expenditure-datalist.html
@@ -1,6 +1,7 @@
-
-    <datalist id="particularsList">
+ <datalist id="particularsList">
       <option value="Sabbath Sch Order"></option>
       <option value="Camp Goal"></option>
       <option value="Hope Tv Collection"></option>
-    </datalist>
+
+      <!-- //All new income data would be added here -->
+ </datalist>
