--- a/church1/assest/datalist/local-expenditure-datalist.html
+++ b/church1/assest/datalist/local-expenditure-datalist.html
@@ -5,8 +5,6 @@
     <option value="Funeral"></option>
     <option value="Charity"></option>
     <option value="Post office Bill"></option>
-
-    
     <option value="Family Ministries"></option>
     <option value="Electricals / Electronics"></option>
     <option value="Sabbath School Subsidy"></option>
@@ -39,4 +37,5 @@
     <option value="Security Allowance"></option>
     <option value="Church Budget"></option>
 
+    <!-- //All new income data would be added here -->
   </datalist>
