--- a/church1/income-records.html
+++ b/church1/income-records.html
@@ -126,9 +126,9 @@
     <br><br><br><br><br>
 
     <footer class="footer">
-        <p>&copy; 2025 Phlashly Inc©. All rights reserved.</p>
+        <p>&copy; 2025 Phlashly Inc. All rights reserved.</p>
         <p>Contact us: <a href="mailto:franklinboachie@gmail.com">franklinboachie@gmail.com</a> | Phone: +233-540-896194</p>
-      </footer>
+    </footer>
 
     <script src="./assest/scripts/script.js"></script>
     <script type="module" src="./assest/webAppUrls/weburls.js"></script>
