--- a/church1/assest/datalist/district-expenditure-datalist.html
+++ b/church1/assest/datalist/district-expenditure-datalist.html
@@ -1,5 +1,7 @@
 <datalist id="particularsList">
     <option value="District Transportation"></option>
     <option value="Doryumu Sch Project"></option>
-    
-  </datalist>
+
+
+  <!-- //All new income data would be added here -->
+</datalist>
