--- a/church1/denominations.html
+++ b/church1/denominations.html
@@ -170,7 +170,7 @@
 <br><br><br><br><br>
     
 <footer class="footer">
-  <p>&copy; 2025 Phlashly Inc©. All rights reserved.</p>
+  <p>&copy; 2025 Phlashly Inc. All rights reserved.</p>
   <p>Contact us: <a href="mailto:franklinboachie@gmail.com">franklinboachie@gmail.com</a> | Phone: +233-540-896194</p>
 </footer>
 
