--- a/church1/full-view.html
+++ b/church1/full-view.html
@@ -123,7 +123,7 @@
   </div>
 
   <footer class="footer">
-    <p>&copy; 2025 Phlashly Inc©. All rights reserved.</p>
+    <p>&copy; 2025 Phlashly Inc. All rights reserved.</p>
     <p>Contact us: <a href="mailto:franklinboachie@gmail.com">franklinboachie@gmail.com</a> | Phone: +233-540-896194</p>
   </footer>
 
