--- a/signup.html
+++ b/signup.html
@@ -68,9 +68,9 @@
     <br><br><br><br>
 
     <footer class="footer">
-        <p>&copy; 2025 Phlashly Inc©. All rights reserved.</p>
+        <p>&copy; 2025 Phlashly Inc. All rights reserved.</p>
         <p>Contact us: <a href="mailto:franklinboachie@gmail.com">franklinboachie@gmail.com</a> | Phone: +233-540-896194</p>
-      </footer>
+    </footer>
 
     <script type="module" src="./outsideAssest/js/signup.js"> </script>
 </body>
